# scrapes

./: .gitignore  Cargo.toml  README.md  downloads_history.json  ffmpeg_paths_history.json  scraped_data.json  scraped_data_enriched.json  scrapes.toml
src/: main.rs
src/downloader/: manager.rs  mod.rs  types.rs  utils.rs
src/ffmpeg/: downloader.rs  mod.rs  params.rs
src/gui/: app.rs  downloads.rs  ffmpeg.rs  mod.rs  scraper.rs  sniffer.rs
src/scrapers/: mod.rs
src/scrapers/fzscrape/: fztv_scraper.rs  mod.rs
src/sniffers/: mod.rs  network_sniffer.rs
