[package]
name = "scrapes"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
bytes = "1.4"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"
tempfile = "3.23.0"
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.11", features = ["stream", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1"] }
