[package]
name = "scrapes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tempfile = "3.23.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.11", features = ["stream", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1"] }
